<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favor" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/cart" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notify" />

</menu>