<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".other_activities.MainActivity"
        android:background="@drawable/loginn">

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/ic_border"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FBFBFB"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:fontFamily="cursive"
            android:text="@string/create_new_acc"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/text"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="27dp"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:ems="10"
            android:drawableLeft="@drawable/ic_email_black"
            android:drawablePadding="15dp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullname" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:ems="10"
            android:drawableLeft="@drawable/ic_lock_black"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:maxLines="1"
            android:maxLength="16"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:ems="10"
            android:drawableLeft="@drawable/ic_lock_black"
            android:drawablePadding="15dp"
            android:hint="@string/confirm_password"
            android:textColor="@color/black"
            android:maxLines="1"
            android:maxLength="16"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />


        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:ems="10"
            android:drawableLeft="@drawable/ic_phone_black"
            android:drawablePadding="15dp"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:maxLines="1"
            android:maxLength="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress_bg"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintVertical_bias="0.19" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:text="@string/policy"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/alreadyHaveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintVertical_bias="0.38" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>