<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".other_activities.MainActivity"
        android:background="@drawable/loginn">

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/ic_border"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#FBFBFB"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tvLow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="58dp"
            android:fontFamily="cursive"
            android:text="@string/welcome"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="64sp"
            android:textStyle="normal|bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/sign_in_with_social"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:id="@+id/icon_apple"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginRight="36dp"
                android:src="@drawable/apple" />

            <ImageView
                android:id="@+id/icon_google"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginRight="36dp"
                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/icon_facebook"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/facebook" />

        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="22dp"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/email"
            android:tooltipText="+@gmail.com"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:ems="10"
            android:drawableLeft="@drawable/ic_lock_black"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:maxLength="16"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />


        <LinearLayout
            android:id="@+id/tvLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="Don't have an account?"
                android:textSize="16sp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/createAcount"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/create_acc"
                android:textStyle="bold"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:text="Forgot password?"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.04000002" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress_bg"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.29000002" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>