<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main_fragments.HomeFragment"
        android:background="#FDF6F9">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/thong_tin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".HomePage"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp">

                    <TextView
                        android:id="@+id/delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginLeft="6dp"
                        android:text="@string/delivery"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/pos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        app:layout_constraintTop_toBottomOf="@id/delivery"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:text="@string/location"
                        android:textSize="16sp"
                        android:textColor="#3A3A3A"
                        android:drawableLeft="@drawable/ic_location" />

                    <AutoCompleteTextView
                        android:id="@+id/search"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:paddingLeft="12dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/pos"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:background="@drawable/ic_bg"
                        android:hint="@string/search"
                        android:drawablePadding="7dp"
                        android:textSize="16sp"
                        android:textColorHint="#9A9A9A"
                        android:drawableLeft="@drawable/ic_search"/>


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile"
                        android:src="@drawable/apple"
                        android:layout_width="41dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/hi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="7dp"
                        android:text="Hi!"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@+id/profile"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:text="Hieu Nguyen"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@+id/profile"
                        app:layout_constraintTop_toBottomOf="@id/hi" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvPopularNear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/popular"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/view_more"
                        android:textAlignment="viewEnd"
                        android:gravity="end"
                        android:textColor="#D5FB6565"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerPopularNear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCategories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/categories"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/show_all"
                        android:textAlignment="viewEnd"
                        android:gravity="end"
                        android:textColor="#D5FB6565"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvNew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="12dp"
                        android:text="New"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/show_all"
                        android:textAlignment="viewEnd"
                        android:gravity="end"
                        android:textColor="#D5FB6565"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:paddingLeft="15dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvRecommend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/recommended"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/show_all"
                        android:textAlignment="viewEnd"
                        android:gravity="end"
                        android:textColor="#D5FB6565"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerRecommend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvPopular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="12dp"
                        android:text="Popular"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/show_all"
                        android:textAlignment="viewEnd"
                        android:gravity="end"
                        android:textColor="#D5FB6565"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerPopular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:paddingLeft="15dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>